Fixed para line spacing issue

--- a/style.css
+++ b/style.css
@@ -107,23 +107,18 @@ p{
 
     .container{
         display: grid;
-        grid-template-columns: 0.8fr;
+        grid-template-columns: 1fr;
         grid-template-rows: 260px 1fr;
         width: 100%;
         height: 100%;
         margin: 3rem 1rem;
-        
-    
     }
     .image{
         grid-column: 1 /2;
         grid-row: 1 /2;
-        
         background: url('images/image-header-mobile.jpg');
-        width: 100%;
-        
+        width: 100%;       
         position: relative;
-        border: 1px solid red;
         background-size: cover;
     }
     .text-content{
@@ -144,17 +139,68 @@ p{
         font-size: 1.85rem;
         text-align: center;
         padding-bottom: 0;
+
     }
     .description-mobile{
-        display: block;
+        display: inline-block;
         text-align: center;
         line-height: 1.5rem;
-        margin-top: 0.5rem;
+        margin-top: 0.3rem;
+        /* border: 1px solid blue; */
+        padding: 0;
+        margin-top: 1.5rem;
     }
     .description-desktop{
         display: none;
     }
     .para{
-        display: block;
+        display: inline-block;
+        /* border: 1px solid red; */
+        width: 100%;
+        /* padding: 1rem; */
+        padding-top:0 ;
+        word-spacing: 0.1rem;
     }
+
+    /* .stats-footer{
+        margin-top: 2rem;
+        display: flex;
+        flex-direction: column;
+        border: 1px solid greenyellow;
+    }
+    .stat{
+        align-items: center;
+    } */
+    
+    /* .stats-footer{
+        border: 1px solid yellow;
+        display: block; 
+        grid-template-rows: repeat(3,1fr);
+        grid-template-columns: 1fr;
+        justify-items: center; 
+        text-align: center;
+        margin-left: 0 ; 
+
+        
+    }
+   
+    
+     .one {
+        grid-row: 1 / 2;
+    }
+    .two {
+        grid-row: 2 / 3;
+    }
+    .three {
+        grid-row: 3 / 4;
+    }
+    .stat{
+        border: 1px solid white;
+        display: block;
+        display : flex; 
+        flex-direction: column; 
+         padding-left: 3em; 
+         text-align: center;
+    } */
 }
+
